--- a/bank-backend/package.json
+++ b/bank-backend/package.json
@@ -9,8 +9,20 @@
   "author": "Michael Quarcoo",
   "license": "ISC",
   "dependencies": {
+    "auto-increment-group": "^1.0.4",
+    "body-parser": "^1.20.2",
+    "connect-mongo": "^5.0.0",
+    "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-asyncify": "^1.1.0",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.2.2",
+    "mongoose-bcrypt": "^1.10.1",
+    "mongoose-type-email": "^1.1.2",
+    "mongoose-unique-validator": "^4.0.0",
+    "nodemailer": "^6.9.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "util": "^0.12.5"
   }
 }
