--- a/bank-backend/package.json
+++ b/bank-backend/package.json
@@ -4,6 +4,8 @@
   "description": "Backend server for Bank",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon app.js",
+    "build": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Quarcoo",
@@ -24,5 +26,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "util": "^0.12.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
