--- a/bank-backend/package.json
+++ b/bank-backend/package.json
@@ -4,7 +4,8 @@
   "description": "Backend server for Bank",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "start:dev": "env-cmd -f .env nodemon app.js",
+    "start:prod": "env-cmd -f .env.prod nodemon app.js",
     "build": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
