--- a/bank-backend/package.json
+++ b/bank-backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "auto-increment-group": "^1.0.4",
     "body-parser": "^1.20.2",
+    "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
