--- a/bank-backend/package.json
+++ b/bank-backend/package.json
@@ -18,7 +18,6 @@
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
-    "express-asyncify": "^1.1.0",
     "express-session": "^1.17.3",
     "mongoose": "^7.2.2",
     "mongoose-bcrypt": "^1.10.1",
@@ -26,8 +25,7 @@
     "mongoose-unique-validator": "^4.0.0",
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "util": "^0.12.5"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
