--- a/bank-backend/package.json
+++ b/bank-backend/package.json
@@ -17,6 +17,7 @@
     "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "dotenv": "^16.1.3",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.2.2",
@@ -29,6 +30,6 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^1.14.9"
   }
 }
