--- a/bank-backend/package.json
+++ b/bank-backend/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
