--- a/bank-atm-interface/package.json
+++ b/bank-atm-interface/package.json
@@ -14,9 +14,11 @@
     "@mui/material": "^5.13.6",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "formik": "^2.4.2",
     "next": "13.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "sass": "^1.63.2"
