--- a/bank-atm-interface/package.json
+++ b/bank-atm-interface/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.2",
+    "mui-one-time-password-input": "^1.1.2",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
