--- a/bank-backend/package.json
+++ b/bank-backend/package.json
@@ -27,7 +27,10 @@
     "mongoose-unique-validator": "^4.0.0",
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.7.1",
+    "winston": "^3.10.0",
+    "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
