--- a/bank-transaction-logs/package.json
+++ b/bank-transaction-logs/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.13.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io-client": "^4.7.1",
     "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
