--- a/bank-atm-interface/package.json
+++ b/bank-atm-interface/package.json
@@ -13,13 +13,16 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "formik": "^2.4.2",
+    "js-cookie": "^3.0.5",
     "mui-one-time-password-input": "^1.1.2",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.1",
     "sharp": "^0.32.1",
     "yup": "^1.2.0"
   },
