--- a/bank-backend/package.json
+++ b/bank-backend/package.json
@@ -21,12 +21,14 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.2.2",
     "mongoose-bcrypt": "^1.10.1",
     "mongoose-type-email": "^1.1.2",
     "mongoose-unique-validator": "^4.0.0",
     "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.1",
     "winston": "^3.10.0",
