--- a/bank-backend/package.json
+++ b/bank-backend/package.json
@@ -28,6 +28,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.1",
+    "uuid": "^9.0.0",
     "winston": "^3.10.0",
     "winston-mongodb": "^5.1.1"
   },
