--- a/bank-atm-interface/package.json
+++ b/bank-atm-interface/package.json
@@ -21,6 +21,7 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-idle-timer": "^5.7.2",
     "react-redux": "^8.1.1",
     "sharp": "^0.32.1",
     "yup": "^1.2.0"
