--- a/bank-atm-interface/package.json
+++ b/bank-atm-interface/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-idle-timer": "^5.7.2",
     "react-redux": "^8.1.1",
+    "react-spinners": "^0.13.8",
     "sharp": "^0.32.1",
     "yup": "^1.2.0"
   },
