--- a/bank-backend/package.json
+++ b/bank-backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.1.3",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.2.2",
     "mongoose-bcrypt": "^1.10.1",
